# SmartNVR

./: .gitignore  CMakeLists.txt  CameraManager.cpp  CameraManager.h  CollisionAnalysis.cpp  CollisionAnalysis.h  GISAnalysis.cpp  GISAnalysis.h  InferenceEngine.cpp  InferenceEngine.h  Pipeline.cpp  Pipeline.h  README.md  ReportGenerator.cpp  ReportGenerator.h  SearchEngine.cpp  SearchEngine.h  TaskManager.cpp  TaskManager.h  VectorDatabase.cpp  VectorDatabase.h  VideoEditor.cpp  VideoEditor.h  VideoEnhancement.cpp  VideoEnhancement.h  VideoSummary.cpp  VideoSummary.h  main.cpp
